opam-version: "2.0"
name: "satysfi-musikui-doc"
version: "0.1.1"
synopsis: "Document: Easy expression of arithmetical restorations with SATySFi"
description: """Document: Easy expression of arithmetical restorations with SATySFi."""

maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/musikui.satyh"
bug-reports: "https://github.com/puripuri2100/musikui.satyh/issues"
dev-repo: "git+https://github.com/puripuri2100/musikui.satyh.git"

depends: [
  "satysfi" {>= "0.0.4" & < "0.0.7"}
  "satyrographos" {>= "0.0.2" & < "0.0.4"}
  "satysfi-dist"
  "satysfi-musikui" {= "%{version}%"}
]
build: [
  ["satyrographos" "opam" "build"
   "-name" "musikui-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "-name" "musikui-doc"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]