opam-version: "2.0"
name: "satysfi-musikui"
version: "0.1.0"
synopsis: "This package is for easy expression of arithmetical restorations with SATySFi"
description: """This package is for easy expression of arithmetical restorations with SATySFi"""

maintainer: "Naoki Kaneko <puripuri2100@gmail.com>"
authors: "Naoki Kaneko <puripuri2100@gmail.com>"
license: "MIT"
homepage: "https://github.com/puripuri2100/musikui.satyh"
bug-reports: "https://github.com/puripuri2100/musikui.satyh/issues"
dev-repo: "git+https://github.com/puripuri2100/musikui.satyh.git"

depends: [
  "satysfi" {>= "0.0.4" & < "0.0.5"}
  "satyrographos" {>= "0.0.2" & < "0.0.4"}
]
build: [ ]
install: [
  ["satyrographos" "opam" "install"
   "-name" "musikui"
   "-prefix" "%{prefix}%"
   "-script" "%{build}%/Satyristes"]
]